# wx-cli

./: CHANGELOG.md  CHANGELOG.zh-CN.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SKILL.md  install.ps1  install.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/wx-cli/: Cargo.toml  build.rs
crates/wx-cli/src/: contact_id.rs  main.rs  output.rs  schema.rs  settings.rs  util.rs  version.rs  visibility_projection.rs
crates/wx-cli/tests/: ignore-filters.rs  native_fts_e2e.rs  paths_status_cli.rs  serve-media.rs  server_manager_cli.rs  thin_client_cli.rs
crates/wx-context/: Cargo.toml
crates/wx-context/src/: account.rs  cache.rs  contact.rs  db_category.rs  decrypt_request.rs  decrypt_scope.rs  error.rs  file_lock.rs  fts_tokenizer.rs  kdf_cache.rs  lib.rs  patch_state.rs  progress.rs  shard_routing.rs  tokenizer.rs  visibility.rs  wal_patch.rs
crates/wx-context/tests/: contact_resolver_pagination.rs  selective_decrypt.rs
crates/wx-db/: Cargo.toml
crates/wx-db/src/: chatrooms.rs  contact_proto.rs  contacts.rs  decode.rs  error.rs  fts.rs  lib.rs  messages.rs  model.rs  native_fts.rs  open.rs  pool.rs  sessions.rs  shard_metadata.rs  xml_extract.rs
crates/wx-db/tests/: anchor-queries.rs  chatrooms-protobuf.rs  contacts-extra-buffer.rs  contacts-sessions.rs  edge-cases.rs  messages-limit-pushdown.rs  messages-routing.rs  (+2 more)
crates/wx-decrypt/: Cargo.toml
crates/wx-keychain/: Cargo.toml
crates/wx-media/: Cargo.toml
crates/wx-monitor/: Cargo.toml
crates/wx-paths/: Cargo.toml
(+113 files in other folders)
