[workspace]
members = ["crates/wx-decrypt", "crates/wx-keychain", "crates/wx-cli", "crates/wx-db", "crates/wx-media", "crates/wx-monitor", "crates/wx-context", "crates/wx-paths"]
resolver = "2"

[workspace.package]
version = "0.7.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/pandorafuture/wx-cli"
description = "WeChat macOS database decryption and query tool"
